<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="GCM_SENDER_ID">505647745249</string>
    <string name="app_name">FindNDrive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserNameHint">Username</string>
    <string name="PasswordHint">Password</string>
    <string name="LoginLabel">Login</string>
    <string name="EmailHint">Email Address</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastNameHint">Last Name</string>
    <string name="ConfirmPasswordHint">Confirm Password</string>
    <string name="RegisterMenuTitle">Register</string>
    <string name="LogoutMenuTitle">Logout</string>
    <string name="DepartureCityHint">Departure City</string>
    <string name="DestinationCityHint">Destination City</string>
    <string name="Smokers">Smokers</string>
    <string name="WomenOnly">Women only</string>
    <string name="FreeOnly">Free Only</string>
    <string name="Date">Date</string>
    <string name="SearchButtonText">Minimise Search</string>
    <string name="CarShareDetailsContactDriverLabel">Contact Driver</string>
    <string name="CarShareDetailsDescriptionLabel">Description:</string>
    <string name="RememberMe">Remember me</string>
    <string name="RegisterString">Or create a new account</string>
    <string name="Time">Time</string>
    <string name="Pets">Pets</string>
    <string name="Minimize">Minimize</string>
    <string name="CreateNewJourney">New offer</string>
    <string name="Refresh">Refresh</string>
    <string name="MyProfile">My Profile</string>
    <string name="TravelBuddies">Travel buddies</string>
    <string name="About">About</string>
    <string name="action_search">Search</string>
    <string name="SearchResultsHeader">Show search results (0)</string>
    <string name="New">New</string>
    <string name="Friends">Friends</string>
    <string name="NewMessages">Messages</string>
    <string name="ShowMore">Show more</string>
    <string name="SelectGender">Select gender</string>
    <string name="KeepMeLoggedIn">Keep me logged in</string>
    <string name="CreateAccount">Create account</string>
    <string name="StepTwo">Step 2...</string>
    <string name="StepOneDescription">Step 1. Specify journey departure and destination, as well as optional waypoints.</string>
    <string name="From">From:</string>
    <string name="Via">Via:</string>
    <string name="To">To:</string>
    <string name="SelectDeparturePoint">Select departure point</string>
    <string name="AddNewWaypoint">Add new waypoint (optional)</string>
    <string name="SelectDestinationPoint">Select destination point</string>
    <string name="ShowRequests">Requests</string>
    <string name="CancelJourney">Cancel journey</string>
    <string name="MakeChange">Make a change</string>
    <string name="EnterChat">Enter chat room</string>
    <string name="ShowPassengers">Passengers</string>
    <string name="ShowSummary">Summary</string>
    <string name="SendFriendRequestTitle">You are sending a friend request to: </string>
    <string name="Send">Send</string>
    <string name="ProfileIcon">Profile icon</string>
    <string name="EnterYourOwnMessage">Enter message (optional)</string>
    <string name="Username">Username:</string>
    <string name="UserInformation">User information:</string>
    <string name="Gender">Gender: </string>
    <string name="DateOfBirth">Date of Birth: </string>
    <string name="Message">Message: </string>
    <string name="Accept">Accept</string>
    <string name="Deny">Deny</string>
    <string name="EmailAddress">Email Address:</string>
    <string name="SendFriendRequest">Send a friend request</string>
    <string name="ShowProfile">Show Profile</string>
    <string name="FriendRequestFrom">Friend request from: </string>
    <string name="ControlPanel">Control Panel</string>
    <string name="TypeYourMessage">Type your message</string>
    <string name="Login">Login</string>
    <string name="WithdrawFromJourney">Withdraw from journey</string>
    <string name="Status">Status: </string>
    <string name="JourneyRouteSummary">Journey route summary:</string>
    <string name="NoPassengers">There are no passengers to display.</string>
    <string name="NoRequests">There are no requests to display.</string>
    <string name="PersonalMessage">Personal message:</string>
    <string name="SaveChanges">Save changes</string>
    <string name="ChangeProfilePicture">Change</string>
    <string name="TapToChange">tap to change</string>
    <string name="ShowLeaderboard">Show leaderboard</string>
    <string name="RateDriver">Rate driver</string>
    <string name="Rate">Rate</string>
    <string name="EnterFeedback">Enter your freedback here</string>
    <string name="RateDriverQuestion">Overall, how would rate the driver?</string>
    <string name="NoRatings">has no ratings.</string>
    <string name="MoreOptions">More options</string>
    <string name="Search">Search</string>
    <string name="DontMind">I don\'t mind</string>
    <string name="Help">Help</string>

    <string name="OfferingJourneyStepOneHelp">"This screen allows you to specify departure and destination points as well as any optional waypoints for your new journey.\n\nYou can proceed to step two of the journey creation process once the departure and destination points have been specified."</string>

    <string name="EditingJourneyStepOneHelp">"This screen allows you to make changes to departure and destination points of this journey as well as to any optional waypoints.\n\nPlease use the controls provided to make the required changes. Your passengers will be automatically notified by the system of any changes that you make.\n\nOnce you're happy with your changes, press the Step 2 button at the bottom of the screen."</string>

    <string name="OfferingJourneyStepTwoHelp">"This screen allows you to provide more information about your new journey.\n\nPlease use the controls provided to provide the information needed. Once you're finished\n\nhit the Offer Journey button at the bottom of the screen."</string>

    <string name="EditingJourneyStepTwoHelp">"This screen allows you to make changes to all the other aspects of your journey.\n\nPlease use the controls provided to make the required changes. Your passengers will be automatically notified by the system of any changes that you make.\n\nOnce you're happy with your changes, press the Save changes button at the bottom of the screen."</string>

    <string name="HomeScreenHelp">"The home screen is the root of the app. From here, you can go to any other section of the app using the buttons visible on the screen."</string>

    <string name="MyJourneysHelp">"This screen shows the list of all the journeys you are associated with, either as a driver or as a passenger.\n\nYou can click on any of the journeys to be transferred to the details screen from which you can perform more a number of actions using the journey control panel."</string>

    <string name="JourneyDetailsHelp">"This screen allows you to see detailed journey information as well as perform a variety of actions using the journey control panel located at the bottom of the screen."</string>

    <string name="FindJourneysHelp">"This screen allows you to find journeys that match your desired criteria. Please use the provided controls to specify departure and destination points.\n\nThe advanced search options button (Three vertical dots on the right) allows you to specify more advanced search criteria such as date and time of departure etc."</string>

    <string name="MyNotificationsHelp">"This screen shows a list of all your notifications. Orange notifications are new and have not been marked as read.\n\n To mark a notification as read, click on the desired notification."</string>

    <string name="MyFriendsHelp">"This screen shows the list of your friends. The white or green circle indicates their current online status.\n\nClick on one of your friends to begin chat."</string>

    <string name="MyProfileHelp">"This is your profile editor. You can use it to edit your personal details and change your profile picture.\n\nChanges are uploaded to the server and saved automatically."</string>

    <string name="ProfileViewerHelp">"This screen shows details of the person mentioned at the top."</string>

    <string name="InstantMessengerHelp">"This is the in-app instant messenger. You can use it to exchange messages with the person whose name is visible at the top."</string>

    <string name="JourneyMessengerHelp">"This is the in-app journey chat room. All of this journey's passengers can use it to exchange messages. Messages sent in the journey chat room are visible by all other passengers."</string>

    <string-array name="vehicle_types">
        <item>Private Car</item>
        <item>Minivan</item>
        <item>Van</item>
        <item>Lorry</item>
        <item>Motorbike</item>
        <item>Other</item>
    </string-array>
    <string-array name="payment_options">
        <item>Cash in hand</item>
        <item>Contact driver</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
