<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/SearchParentLinearLayout">

        <LinearLayout
            android:id="@+id/SearchResultsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.5">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/SearchCarSharesListView"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SearchPanelLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView android:id="@+id/SearchLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Minimize"
                style="@style/FontStyle"/>

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:hint="@string/DestinationCityHint"
                    android:id="@+id/SearchDestinationCityTextView"
                    android:singleLine="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:hint="@string/DepartureCityHint"
                    android:id="@+id/SearchDepartureCityTextView"
                    android:singleLine="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:id="@+id/SearchDateTextView"
                    android:hint="@string/Date"
                    android:editable="false"
                    android:singleLine="true"/>

                <EditText
                    android:layout_marginTop="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/SearchTimeTextView"
                    android:hint="@string/Time"
                    android:editable="false"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Smokers"
                    android:id="@+id/SmokersCheckbox"/>

                <CheckBox
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WomenOnly"
                    android:id="@+id/SearchWomenOnlyCheckbox"/>

                <CheckBox
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FreeOnly"
                    android:id="@+id/SearchFreeCheckbox"/>

                <CheckBox
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pets"
                    android:id="@+id/SearchPetsCheckBox"/>
            </LinearLayout>

            </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_marginTop="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SearchButtonText"
                        android:id="@+id/SearchButton" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>