<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="500px"
        android:layout_height="150px"
        android:id="@+id/UserLoginUserNameEditText"
        android:layout_marginTop="151dp"
        android:hint="@string/UserNameHint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="500px"
        android:layout_height="150px"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/UserLoginPasswordEditText"
        android:hint="@string/PasswordHint"
        android:layout_below="@+id/UserLoginUserNameEditText"
        android:layout_alignLeft="@+id/UserLoginUserNameEditText"
        android:layout_marginTop="31dp"/>

    <Button
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:text="@string/LoginLabel"
        android:id="@+id/LoginUserButton"
        android:layout_below="@+id/UserLoginPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

</RelativeLayout>