<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="4">
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UserNameTextField"
                android:layout_marginTop="50sp"
                android:hint="@string/UserNameHint"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmailTextField"
                android:layout_marginTop="10sp"
                android:hint="@string/EmailHint"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/RegistrationPasswordTextField"
                android:hint="@string/PasswordHint"
                android:layout_marginTop="10sp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/RegistrationConfirmPasswordTextField"
                android:hint="@string/ConfirmPasswordHint"
                android:layout_marginTop="10sp"
                android:singleLine="true"/>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RegisterActivityGender"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                style="@style/FontStyle"
                android:spinnerMode="dialog"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RegisterString"
                android:id="@+id/RegisterNewUserButton"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/RegisterActivityErrorMessages"
                android:layout_marginTop="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="4">
    </LinearLayout>
</LinearLayout>