<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FriendRequestReceiverHeaderTextView"
        android:text="@string/FriendRequestFrom"
        style="@style/LargeBlueHeader"/>

    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#32B4E4"/>

    <TextView
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Message: "
        style="@style/LargeBlueHeader"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginLeft="10dip"
        android:id="@+id/FriendRequestReceivedMessageTextView"/>

    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowProfile"
        android:minHeight="50dip"
        android:background="@drawable/alert_button_selector"
        android:id="@+id/FriendRequestReceivedViewProfileButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Accept"
            android:background="@drawable/alert_button_selector"
            android:id="@+id/FriendRequestReceivedActivityAcceptButton"
            android:minHeight="50dip"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="1dip"
            android:background="#000000"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Deny"
            android:background="@drawable/alert_button_selector"
            android:id="@+id/FriendRequestReceivedActivityDenyButton"
            android:minHeight="50dip"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>